syntax = "proto3";

package province.v1;

import "google/api/annotations.proto";

option go_package = "github.com/go-kratos/kratos-layout/api/province/v1;v1";

service ProvinceService {
  // Commands
  rpc CreateProvince (CreateProvinceRequest) returns (CreateProvinceResponse) {
    option (google.api.http) = {
      post: "/api/v1/provinces"
      body: "*"
    };
  }
  
  rpc UpdateProvince (UpdateProvinceRequest) returns (UpdateProvinceResponse) {
    option (google.api.http) = {
      put: "/api/v1/provinces/{id}"
      body: "*"
    };
  }
  
  rpc DeleteProvince (DeleteProvinceRequest) returns (DeleteProvinceResponse) {
    option (google.api.http) = {
      delete: "/api/v1/provinces/{id}"
    };
  }
  
  // Queries
  rpc GetProvince (GetProvinceRequest) returns (GetProvinceResponse) {
    option (google.api.http) = {
      get: "/api/v1/provinces/{id}"
    };
  }
  
  rpc GetProvinceByCode (GetProvinceByCodeRequest) returns (GetProvinceByCodeResponse) {
    option (google.api.http) = {
      get: "/api/v1/provinces/code/{code}"
    };
  }
  
  rpc ListProvinces (ListProvincesRequest) returns (ListProvincesResponse) {
    option (google.api.http) = {
      get: "/api/v1/provinces"
    };
  }
  
  rpc ListProvincesByCountry (ListProvincesByCountryRequest) returns (ListProvincesByCountryResponse) {
    option (google.api.http) = {
      get: "/api/v1/countries/{country_id}/provinces"
    };
  }
}

// Request/Response messages
message CreateProvinceRequest {
  string country_id = 1;
  string code = 2;
  string name = 3;
  string name_en = 4;
  string type = 5;
  double area = 6;
  int64 population = 7;
  string coordinates = 8;
  string capital = 9;
  string postal_code = 10;
  string phone_prefix = 11;
  int32 sort_order = 12;
}

message CreateProvinceResponse {
  Province province = 1;
}

message UpdateProvinceRequest {
  string id = 1;
  string country_id = 2;
  string code = 3;
  string name = 4;
  string name_en = 5;
  string type = 6;
  double area = 7;
  int64 population = 8;
  string coordinates = 9;
  string capital = 10;
  string postal_code = 11;
  string phone_prefix = 12;
  int32 sort_order = 13;
  string status = 14;
}

message UpdateProvinceResponse {
  Province province = 1;
}

message DeleteProvinceRequest {
  string id = 1;
}

message DeleteProvinceResponse {
  bool success = 1;
}

message GetProvinceRequest {
  string id = 1;
}

message GetProvinceResponse {
  Province province = 1;
}

message GetProvinceByCodeRequest {
  string code = 1;
  string country_id = 2;
}

message GetProvinceByCodeResponse {
  Province province = 1;
}

message ListProvincesRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
  string country_id = 4;
  string type = 5;
  string status = 6;
  string code = 7;
}

message ListProvincesResponse {
  repeated Province provinces = 1;
  int64 total = 2;
}

message ListProvincesByCountryRequest {
  string country_id = 1;
}

message ListProvincesByCountryResponse {
  repeated Province provinces = 1;
}

message Province {
  string id = 1;
  string country_id = 2;
  string code = 3;
  string name = 4;
  string name_en = 5;
  string type = 6;
  double area = 7;
  int64 population = 8;
  string coordinates = 9;
  string capital = 10;
  string postal_code = 11;
  string phone_prefix = 12;
  int32 sort_order = 13;
  string status = 14;
  string created_at = 15;
  string updated_at = 16;
  string created_by = 17;
  string updated_by = 18;
}

