syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";

option go_package = "github.com/go-kratos/kratos-layout/api/user/v1;v1";

service UserService {
  // Commands
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }
  
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      put: "/api/v1/users/{id}"
      body: "*"
    };
  }
  
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      delete: "/api/v1/users/{id}"
    };
  }
  
  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse) {
    option (google.api.http) = {
      post: "/api/v1/users/{id}/change-password"
      body: "*"
    };
  }
  
  // Queries
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/{id}"
    };
  }
  
  rpc GetUserByEmail (GetUserByEmailRequest) returns (GetUserByEmailResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/email/{email}"
    };
  }
  
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (GetUserByUsernameResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/username/{username}"
    };
  }
  
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/api/v1/users"
    };
  }
}

// User message
message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string full_name = 4;
  string date_of_birth = 5;
  string gender = 6;
  string last_login_at = 7;
  string last_login_ip = 8;
  string role = 9;
  string status = 10;
  string created_at = 11;
  string updated_at = 12;
}

// Command Requests/Responses
message CreateUserRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string full_name = 4;
  string date_of_birth = 5;
  string gender = 6;
  string role = 7;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  string full_name = 2;
  string date_of_birth = 3;
  string gender = 4;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ChangePasswordRequest {
  string id = 1;
  string new_password = 2;
}

message ChangePasswordResponse {
  bool success = 1;
}

// Query Requests/Responses
message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  User user = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
  string role = 4;
  string status = 5;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

